Refactored GraphQL mapping and ItemManager so GraphQL will translate projections and mutations to the schema type names, and ItemManager will translate schema type names to schema type IDs